# langserve_ollama

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: .env_sample  base.py  chain.py  chains.py  chat.py  llm.py  rag.py  server.py  translator.py  xionic.py
app/prompts/: rag-exaone.yaml
example/: 00-ChatOllama.ipynb  00-ollama-test.ipynb  01-Langserve-RemoteRunnable.ipynb  01-Lanserve-RemoteRunnable.ipynb  01-remote-invoke.ipynb  02-more-examples.ipynb  03-lm-studio.ipynb  03-xionic-llama3-70B.ipynb  04-lm-studio.ipynb  main.py  requirements.txt
example/.streamlit/: secrets.toml
example/prompts/: rag-exaone.yaml
ollama-modelfile/EEVE-Korean-Instruct-10.8B-v1.0/: Modelfile  Modelfile-Q8  Modelfile-V02
ollama-modelfile/EXAONE-3.5/: Modelfile  README.md
ollama-modelfile/Llama-3-8B-Instruct/: Modelfile
ollama-modelfile/Llama-3-Open-Ko-8B/: Modelfile  README.md
ollama-modelfile/Llama-3-Open-Ko-8B-Instruct-Preview/: Modelfile
ollama-modelfile/Llama3-8B-Instruct/: llama 3 공개! (8B, 70B).md
ollama-modelfile/Qwen2.5-7B-Instruct-kowiki-qa-context/: Modelfile  README.md
