[tool.poetry]
name = "langserve-ollama"
version = "0.1.0"
description = ""
authors = ["teddy <teddylee777@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
langchain = "^0.1.15"
langserve = "^0.0.51"
langchain-openai = "^0.1.2"
streamlit = "^1.33.0"
fastapi = "^0.110.1"
sse-starlette = "^2.1.0"
unstructured = {extras = ["pdf"], version = "^0.13.2"}
faiss-cpu = "^1.8.0"
langchain-community = "^0.0.32"
langchainhub = "^0.1.15"
langchain-text-splitters = "^0.0.1"
httpx-sse = "^0.4.0"
sentence-transformers = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
